# HD2-mad-achievement-tracker

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PHASE0-FINDINGS.md  README.md  docker-compose.yml  index.html  package.json  plan.md  spike-ocr-v2.ts  spike-ocr.ts  tsconfig.json  vite.config.ts
.agents/skills/worktree-flow/: CHANGELOG.md  SKILL.md  pyproject.toml
.agents/skills/worktree-flow/config/: __init__.py  cli.py  display.py  typing_defs.py
.agents/skills/worktree-flow/config/detectors/: __init__.py  base.py  build_tools.py  infrastructure.py  package_managers.py
.agents/skills/worktree-flow/config/generators/: __init__.py  services_config.py  setup_script.py  worktree_config.py
.agents/skills/worktree-flow/config/optimizer/: __init__.py  auditor.py  migrator.py
.agents/skills/worktree-flow/config/tests/: __init__.py  test_auditor.py  test_detectors.py  test_generators.py
.agents/skills/worktree-flow/docker/: Containerfile  compose.yaml  healthcheck.py
.agents/skills/worktree-flow/docs/: agent-integration.md  lifecycle-hooks.md  lifecycle-spec.md  migration.md  service-configuration.md
.agents/skills/worktree-flow/hooks/enforce-implementing/: claude.py  core.py
.agents/skills/worktree-flow/hooks/enforce-worktree/: claude.py  cline.py  (+1 more)
.agents/skills/worktree-flow/lifecycle/: __init__.py  post_init.py  pre_cleanup.py  pre_merge.py  pre_review.py  pre_validate.py
.agents/skills/worktree-flow/templates/: review_request.jinja  worktree-config.toml  worktree-services.example.toml
.agents/skills/worktree-flow/worktree_flow/: __init__.py
(+419 files in other folders)
